test/lambdaLhs.slq

def main(){
	y:=0:ğ”¹;
	z:=0:ğ”¹;
	((x:ğ”¹)â‡’(x,y)):=((x:ğ”¹)â‡’(x,z)) /// error
}
